-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.0
-
None
-
win32, msvc2008
-
b2c0bdc2ea22f236336eca1d85be008626e1299a
QTCORED4$Purify_c_Depot_builddir_qt_bin.DLL!qt_tokenize(const char * s=0x00000000, unsigned long s_len=0, unsigned long * advance=0x0019e8d0, qt_token_info & token_info=
{...}) Line 206 C++
QTCORED4$Purify_c_Depot_builddir_qt_bin.DLL!qt_parse_pattern(const char * s=0x00000000, unsigned int * version=0x05b76724, bool * debug=0x0019eb6f, QByteArray * key=0x0019eb7c) Line 261 + 0x18 bytes C++
> QTCORED4$Purify_c_Depot_builddir_qt_bin.DLL!qt_get_verificationdata(const char * (void)* pfn=0x0e621cc0, unsigned int * qt_version=0x05b76724, bool * debug=0x0019eb6f, QByteArray * key=0x0019eb7c, bool * exceptionThrown=0x0019eb66) Line 656 + 0x15 bytes C++
QTCORED4$Purify_c_Depot_builddir_qt_bin.DLL!QLibraryPrivate::isPlugin(QSettings * settings=0x05aca8f8) Line 775 + 0x1f bytes C++
When qt_parse_pattern passes on a NULL s parameter to qt_tokenize, qt_tokenize doesn't check before trying to array access the pointer via s[at]