Check for 0 before accessing the pointer

Fixes some reported crashes where we get into
qt_tokenize() with a 0 pointer.

Not relevant for Qt 5, as qt_tokenize() doesn't
exist there.

Task-number: QTBUG-26247
Change-Id: I1cc5c5b514c1c35dfee318ad4d37a54deffc5d53
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>